updated index.html file

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     </button>
 
                     <!-- lOGO TEXT HERE -->
-                    <a class="navbar-brand" href="#"><img src="images/3Glogo.gif" class="img-responsive" style="width: 140px; margin-top: -16px;"></a>
+                    <a class="navbar-brand" href="#"><img src="images/3GLogo.gif" class="img-responsive" style="width: 140px; margin-top: -16px;"></a>
                </div>
 
                <!-- MENU LINKS -->
@@ -139,7 +139,7 @@
                                    <p>This is where 3G Healthcare began. The core of the company beliefs is delivering next generation healthcare facilities that encompass modern features while bringing hotel like amenities; exceptional customer service and outstanding quality care to this new environment.</p>
                               </div>
                               <figure class="profile wow fadeInUp" data-wow-delay="1s">
-                                   <img src="images/jonathon.jpg" class="img-responsive" alt="">
+                                   <img src="images/Jonathon.jpg" class="img-responsive" alt="">
                                    <figcaption>
                                         <h3>Jonathan Dougherty</h3>
                                         <p>Principal</p>
@@ -276,7 +276,7 @@
                                    <h3><!-- <a href="news-detail.html"> -->Introducing a new healing process</a></h3>
                                    <p>Fusce vel sem finibus, rhoncus massa non, aliquam velit. Nam et est ligula.</p>
                                    <div class="author">
-                                        <img src="images/jonathon.jpg" class="img-responsive" alt="">
+                                        <img src="images/Jonathon.jpg" class="img-responsive" alt="">
                                         <div class="author-info">
                                              <h5>Jonathan Dougherty</h5>
                                              <p>Principal</p>
@@ -297,7 +297,7 @@
                                    <h3><!-- <a href="news-detail.html" -->Review Annual Medical Research<!-- </a> --></h3>
                                    <p>Vivamus non nulla semper diam cursus maximus. Pellentesque dignissim.</p>
                                    <div class="author">
-                                        <img src="images/jonathon.jpg" class="img-responsive" alt="">
+                                        <img src="images/Jonathon.jpg" class="img-responsive" alt="">
                                         <div class="author-info">
                                              <h5>Jonathan Dougherty</h5>
                                              <p>Principal</p>
