--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     </button>
 
                     <!-- lOGO TEXT HERE -->
-                    <a class="navbar-brand" href="#"><img src="images/3GLogo.gif" class="img-responsive" style="width: 140px; margin-top: -16px;"></a>
+                    <a class="navbar-brand" href="#"><img src="images/3Glogo.gif" class="img-responsive" style="width: 140px; margin-top: -16px;"></a>
                </div>
 
                <!-- MENU LINKS -->
@@ -74,8 +74,8 @@
                          <li><a href="#about" class="smoothScroll">About Us</a></li>
                          <li><a href="#team" class="smoothScroll">Principals</a></li>
                          <!-- <li><a href="#news" class="smoothScroll">News</a></li> -->
-                         <li><a href="#google-map" class="smoothScroll">Contact</a></li>
-                         <li class="appointment-btn"><a href="#appointment">Send Us A Message</a></li>
+                         <!-- <li><a href="#google-map" class="smoothScroll">Contact</a></li>
+                         <li class="appointment-btn"><a href="#appointment">Send Us A Message</a></li> -->
                     </ul>
                </div>
 
@@ -138,12 +138,12 @@
                                    
                                    <p>This is where 3G Healthcare began. The core of the company beliefs is delivering next generation healthcare facilities that encompass modern features while bringing hotel like amenities; exceptional customer service and outstanding quality care to this new environment.</p>
                               </div>
-                              <figure class="profile wow fadeInUp" data-wow-delay="1s">
-                                   <img src="images/Jonathon.jpg" class="img-responsive" alt="">
+                              <!-- <figure class="profile wow fadeInUp" data-wow-delay="1s">
+                                   <img src="images/jonathon.jpg" class="img-responsive" alt="">
                                    <figcaption>
                                         <h3>Jonathan Dougherty</h3>
                                         <p>Principal</p>
-                                   </figcaption>
+                                   </figcaption> -->
                               </figure>
                          </div>
                     </div>
@@ -233,26 +233,26 @@
 
 
      <!-- NEWS -->
-     <section id="news" data-stellar-background-ratio="2.5">
+     <!-- <section id="news" data-stellar-background-ratio="2.5">
           <div class="container">
                <div class="row">
 
-                    <div class="col-md-12 col-sm-12">
+                    <div class="col-md-12 col-sm-12"> -->
                          <!-- SECTION TITLE -->
-                         <div class="section-title wow fadeInUp" data-wow-delay="0.1s">
+                         <!-- <div class="section-title wow fadeInUp" data-wow-delay="0.1s">
                               <h2>Latest News</h2>
                          </div>
                     </div>
 
-                    <div class="col-md-4 col-sm-6">
+                    <div class="col-md-4 col-sm-6"> -->
                          <!-- NEWS THUMB -->
-                         <div class="news-thumb wow fadeInUp" data-wow-delay="0.4s">
+                         <!-- <div class="news-thumb wow fadeInUp" data-wow-delay="0.4s"> -->
                               <!-- <a href="news-detail.html"> -->
-                                   <img src="images/news-image1.jpg" class="img-responsive" alt="">
-                              </a>
+                                   <!-- <img src="images/news-image1.jpg" class="img-responsive" alt=""> -->
+                              <!-- </a>
                               <div class="news-info">
                                    <span>March 08, 2018</span>
-                                   <h3><!-- <a href="news-detail.html"> -->About Amazing Technology</a></h3>
+                                   <h3><a href="news-detail.html">About Amazing Technology</a></h3>
                                    <p>Maecenas risus neque, placerat volutpat tempor ut, vehicula et felis.</p>
                                    <div class="author">
                                         <img src="images/Aaron.jpg" class="img-responsive" alt="">
@@ -265,18 +265,18 @@
                          </div>
                     </div>
 
-                    <div class="col-md-4 col-sm-6">
+                    <div class="col-md-4 col-sm-6"> -->
                          <!-- NEWS THUMB -->
-                         <div class="news-thumb wow fadeInUp" data-wow-delay="0.6s">
-                             <!--  <a href="news-detail.html"> -->
+                         <!-- <div class="news-thumb wow fadeInUp" data-wow-delay="0.6s">
+                              <a href="news-detail.html">
                                    <img src="images/news-image2.jpg" class="img-responsive" alt="">
                               </a>
                               <div class="news-info">
                                    <span>February 20, 2018</span>
-                                   <h3><!-- <a href="news-detail.html"> -->Introducing a new healing process</a></h3>
+                                   <h3><a href="news-detail.html">Introducing a new healing process</a></h3>
                                    <p>Fusce vel sem finibus, rhoncus massa non, aliquam velit. Nam et est ligula.</p>
                                    <div class="author">
-                                        <img src="images/Jonathon.jpg" class="img-responsive" alt="">
+                                        <img src="images/jonathon.jpg" class="img-responsive" alt="">
                                         <div class="author-info">
                                              <h5>Jonathan Dougherty</h5>
                                              <p>Principal</p>
@@ -286,18 +286,18 @@
                          </div>
                     </div>
 
-                    <div class="col-md-4 col-sm-6">
+                    <div class="col-md-4 col-sm-6"> -->
                          <!-- NEWS THUMB -->
-                         <div class="news-thumb wow fadeInUp" data-wow-delay="0.8s">
-                              <!-- <a href="news-detail.html"> -->
+                         <!-- <div class="news-thumb wow fadeInUp" data-wow-delay="0.8s">
+                              <a href="news-detail.html">
                                    <img src="images/news-image3.jpg" class="img-responsive" alt="">
                               </a>
                               <div class="news-info">
                                    <span>January 27, 2018</span>
-                                   <h3><!-- <a href="news-detail.html" -->Review Annual Medical Research<!-- </a> --></h3>
+                                   <h3><a href="news-detail.html"Review Annual Medical Research</a></h3>
                                    <p>Vivamus non nulla semper diam cursus maximus. Pellentesque dignissim.</p>
                                    <div class="author">
-                                        <img src="images/Jonathon.jpg" class="img-responsive" alt="">
+                                        <img src="images/jonathon.jpg" class="img-responsive" alt="">
                                         <div class="author-info">
                                              <h5>Jonathan Dougherty</h5>
                                              <p>Principal</p>
@@ -308,12 +308,12 @@
                     </div>
 
                </div>
-          </div>
+          </div> -->
      </section>
 
 
      <!-- MAKE AN APPOINTMENT -->
-     <section id="appointment" data-stellar-background-ratio="3">
+     <!-- <section id="appointment" data-stellar-background-ratio="3">
           <div class="container">
                <div class="row">
 
@@ -321,12 +321,12 @@
                          <img src="images/appointment-image.jpg" class="img-responsive" alt="">
                     </div>
 
-                    <div class="col-md-6 col-sm-6">
+                    <div class="col-md-6 col-sm-6"> -->
                          <!-- CONTACT FORM HERE -->
-                         <form id="appointment-form" role="form" method="post" action="#">
+                         <!-- <form id="appointment-form" role="form" method="post" action="#"> -->
 
                               <!-- SECTION TITLE -->
-                              <div class="section-title wow fadeInUp" data-wow-delay="0.4s">
+                              <!-- <div class="section-title wow fadeInUp" data-wow-delay="0.4s">
                                    <h2>Send Us A Message</h2>
                               </div>
 
@@ -339,14 +339,14 @@
                                    <div class="col-md-6 col-sm-6">
                                         <label for="email">Email</label>
                                         <input type="email" class="form-control" id="email" name="email" placeholder="Your Email">
-                                   </div>
+                                   </div> -->
 
                                    <!-- <div class="col-md-6 col-sm-6">
                                         <label for="date">Select Date</label>
                                         <input type="date" name="date" value="" class="form-control">
                                    </div> -->
 
-                                   <div class="col-md-6 col-sm-6">
+                                   <!-- <div class="col-md-6 col-sm-6">
                                         <label for="select">Select Catagory</label>
                                         <select class="form-control">
                                              <option>General Question</option>
@@ -368,19 +368,19 @@
 
                </div>
           </div>
-     </section>
+     </section> -->
 
 
      <!-- GOOGLE MAP -->
-     <section id="google-map">
+     <!-- <section id="google-map"> -->
      <!-- How to change your own map point
             1. Go to Google Maps
             2. Click on your location point
             3. Click "Share" and choose "Embed map" tab
             4. Copy only URL and paste it within the src="" field below
 	-->
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3059.4684159052135!2d-105.05601228450121!3d39.93091087942448!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x876b8a8a9dd15a0d%3A0x2e5ca79a035718a0!2s12975+Sheridan+Boulevard%2C+Broomfield%2C+CO+80020!5e0!3m2!1sen!2sus!4v1530380249971" width="100%" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
-     </section>           
+          <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3059.4684159052135!2d-105.05601228450121!3d39.93091087942448!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x876b8a8a9dd15a0d%3A0x2e5ca79a035718a0!2s12975+Sheridan+Boulevard%2C+Broomfield%2C+CO+80020!5e0!3m2!1sen!2sus!4v1530380249971" width="100%" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
+     </section>      -->      
 
 
      <!-- FOOTER -->
@@ -401,7 +401,7 @@
                     </div>
 
                     <div class="col-md-4 col-sm-4"> 
-                         <div class="footer-thumb"> 
+                         <!-- <div class="footer-thumb"> 
                               <h4 class="wow fadeInUp" data-wow-delay="0.4s">Latest News</h4>
                               <div class="latest-stories">
                                    <div class="stories-image">
@@ -422,13 +422,13 @@
                                         <span>February 20, 2018</span>
                                    </div>
                               </div>
-                         </div>
+                         </div> -->
                     </div>
 
                     <div class="col-md-4 col-sm-4"> 
                          <div class="footer-thumb">
                               <div class="opening-hours">
-                                   <h4 class="wow fadeInUp" data-wow-delay="0.4s">Opening Hours</h4>
+                                   <h4 class="wow fadeInUp" data-wow-delay="0.4s">Business Hours</h4>
                                    <p>Monday - Friday <span>09:00 AM - 5:00 PM</span></p>
                                    <p>Saturday <span>09:00 AM - 08:00 PM</span></p>
                                    <p>Sunday <span>Closed</span></p>
