logo image fixed

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     </button>
 
                     <!-- lOGO TEXT HERE -->
-                    <a class="navbar-brand" href="#"><img src="images/3Glogo.gif" class="img-responsive" style="width: 140px; margin-top: -16px;"></a>
+                    <a class="navbar-brand" href="#"><img src="images/3GLogo.gif" class="img-responsive" style="width: 140px; margin-top: -16px;"></a>
                </div>
 
                <!-- MENU LINKS -->
