--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
                     </div>
                          
                     <div class="col-md-8 col-sm-7 text-align-right">
-                         <span class="phone-icon"><i class="fa fa-phone"></i> 720.379.8596</span>
-                         <span class="date-icon"><i class="fa fa-calendar-plus-o"></i> 9:00 AM - 5:00 PM (Mon-Fri)</span>
-                         <span class="email-icon"><i class="fa fa-envelope-o"></i> <a href="#">info@3ghc.com</a></span>
+                         <span class="phone-icon"><i class="fa fa-phone"></i> 720.710.5580</span>
+                         <!-- <span class="date-icon"><i class="fa fa-calendar-plus-o"></i> 9:00 AM - 5:00 PM (Mon-Fri)</span> -->
+                         <!-- <span class="email-icon"><i class="fa fa-envelope-o"></i> <a href="#">info@3ghc.com</a></span> -->
                     </div>
 
                </div>
@@ -71,11 +71,11 @@
                <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
                          <li><a href="#top" class="smoothScroll">Home</a></li>
-                         <li><a href="#about" class="smoothScroll">About Us</a></li>
-                         <li><a href="#team" class="smoothScroll">Principals</a></li>
+                        <!--  <li><a href="#about" class="smoothScroll">About Us</a></li>
+                         <li><a href="#team" class="smoothScroll">Principals</a></li> -->
                          <!-- <li><a href="#news" class="smoothScroll">News</a></li> -->
-                         <!-- <li><a href="#google-map" class="smoothScroll">Contact</a></li>
-                         <li class="appointment-btn"><a href="#appointment">Send Us A Message</a></li> -->
+                         <li><a href="#google-map" class="smoothScroll">Contact</a></li>
+                         <li class="appointment-btn"><a href="#appointment">Send Us A Message</a></li>
                     </ul>
                </div>
 
@@ -91,20 +91,20 @@
                          <div class="owl-carousel owl-theme">
                               <div class="item item-first">
                                    <div class="caption">
-                                        <div class="col-md-offset-1 col-md-10">
+                                        <!-- <div class="col-md-offset-1 col-md-10">
                                              <h3>Let's make your life happier</h3>
                                              <h1>Progressive Healthy Living</h1>
                                              <a href="#team" class="section-btn btn btn-default smoothScroll">Meet Our Principals</a>
-                                        </div>
+                                        </div> -->
                                    </div>
                               </div>
 
                               <div class="item item-second">
                                    <div class="caption">
                                         <div class="col-md-offset-1 col-md-10">
-                                             <h3>Aenean luctus lobortis tellus</h3>
+                                             <!-- <h3>Aenean luctus lobortis tellus</h3>
                                              <h1>New Lifestyle</h1>
-                                             <a href="#about" class="section-btn btn btn-default btn-gray smoothScroll">More About Us</a>
+                                             <a href="#about" class="section-btn btn btn-default btn-gray smoothScroll">More About Us</a> -->
                                         </div>
                                    </div>
                               </div>
@@ -112,8 +112,8 @@
                               <div class="item item-third">
                                    <div class="caption">
                                         <div class="col-md-offset-1 col-md-10">
-                                             <h3>Develop and operate next generation post acute facilities that bridge hotel like amenities, exceptional customer service and outstanding quality care.  We believe that delivering these elements to consumers will set us apart from our competition and will be essential to long-term sustainability and success in a varying healthcare environment.</h3>
-                                             <h1>Our Mission</h1>
+                                             <!-- <h3>Develop and operate next generation post acute facilities that bridge hotel like amenities, exceptional customer service and outstanding quality care.  We believe that delivering these elements to consumers will set us apart from our competition and will be essential to long-term sustainability and success in a varying healthcare environment.</h3>
+                                             <h1>Our Mission</h1> -->
                                              <!-- <a href="#news" class="section-btn btn btn-default btn-blue smoothScroll">Read Stories</a> -->
                                         </div>
                                    </div>
@@ -126,7 +126,7 @@
 
 
      <!-- ABOUT -->
-     <section id="about">
+     <!-- <section id="about">
           <div class="container">
                <div class="row">
 
@@ -138,12 +138,12 @@
                                    
                                    <p>This is where 3G Healthcare began. The core of the company beliefs is delivering next generation healthcare facilities that encompass modern features while bringing hotel like amenities; exceptional customer service and outstanding quality care to this new environment.</p>
                               </div>
-                              <!-- <figure class="profile wow fadeInUp" data-wow-delay="1s">
+                              <figure class="profile wow fadeInUp" data-wow-delay="1s">
                                    <img src="images/jonathon.jpg" class="img-responsive" alt="">
                                    <figcaption>
                                         <h3>Jonathan Dougherty</h3>
                                         <p>Principal</p>
-                                   </figcaption> -->
+                                   </figcaption>
                               </figure>
                          </div>
                     </div>
@@ -151,10 +151,10 @@
                </div>
           </div>
      </section>
-
+ -->
 
      <!-- TEAM -->
-     <section id="team" data-stellar-background-ratio="1">
+     <!-- <section id="team" data-stellar-background-ratio="1">
           <div class="container">
                <div class="row">
 
@@ -205,7 +205,7 @@
                                    </div>
 
                          </div>
-                    </div>
+                    </div> -->
 
                     <!-- <div class="col-md-4 col-sm-6">
                          <div class="team-thumb wow fadeInUp" data-wow-delay="0.6s">
@@ -313,20 +313,20 @@
 
 
      <!-- MAKE AN APPOINTMENT -->
-     <!-- <section id="appointment" data-stellar-background-ratio="3">
+     <section id="appointment" data-stellar-background-ratio="3">
           <div class="container">
                <div class="row">
 
                     <div class="col-md-6 col-sm-6">
-                         <img src="images/appointment-image.jpg" class="img-responsive" alt="">
+                         <img src="images/contact.jpg" class="img-responsive" alt="">
                     </div>
 
-                    <div class="col-md-6 col-sm-6"> -->
+                    <div class="col-md-6 col-sm-6">
                          <!-- CONTACT FORM HERE -->
-                         <!-- <form id="appointment-form" role="form" method="post" action="#"> -->
+                         <form id="appointment-form" role="form" method="post" action="send_form_email.php">
 
                               <!-- SECTION TITLE -->
-                              <!-- <div class="section-title wow fadeInUp" data-wow-delay="0.4s">
+                              <div class="section-title wow fadeInUp" data-wow-delay="0.4s">
                                    <h2>Send Us A Message</h2>
                               </div>
 
@@ -339,14 +339,14 @@
                                    <div class="col-md-6 col-sm-6">
                                         <label for="email">Email</label>
                                         <input type="email" class="form-control" id="email" name="email" placeholder="Your Email">
-                                   </div> -->
+                                   </div>
 
-                                   <!-- <div class="col-md-6 col-sm-6">
+                                  <!--  <div class="col-md-6 col-sm-6">
                                         <label for="date">Select Date</label>
                                         <input type="date" name="date" value="" class="form-control">
                                    </div> -->
 
-                                   <!-- <div class="col-md-6 col-sm-6">
+                                   <div class="col-md-6 col-sm-6">
                                         <label for="select">Select Catagory</label>
                                         <select class="form-control">
                                              <option>General Question</option>
@@ -356,9 +356,9 @@
                                    </div>
 
                                    <div class="col-md-12 col-sm-12">
-                                        <label for="telephone">Phone Number</label>
+                                        <label for="phone">Phone Number</label>
                                         <input type="tel" class="form-control" id="phone" name="phone" placeholder="Phone">
-                                        <label for="Message">Additional Message</label>
+                                        <label for="message">Additional Message</label>
                                         <textarea class="form-control" rows="5" id="message" name="message" placeholder="Message"></textarea>
                                         <button type="submit" class="form-control" id="cf-submit" name="submit">Submit Button</button>
                                    </div>
@@ -368,7 +368,7 @@
 
                </div>
           </div>
-     </section> -->
+     </section>
 
 
      <!-- GOOGLE MAP -->
@@ -391,11 +391,11 @@
                     <div class="col-md-4 col-sm-4">
                          <div class="footer-thumb"> 
                               <h4 class="wow fadeInUp" data-wow-delay="0.4s">Contact Info</h4>
-                              <p>Fusce at libero iaculis, venenatis augue quis, pharetra lorem. Curabitur ut dolor eu elit consequat ultricies.</p>
+                              <!-- <p>Fusce at libero iaculis, venenatis augue quis, pharetra lorem. Curabitur ut dolor eu elit consequat ultricies.</p> -->
 
                               <div class="contact-info">
-                                   <p><i class="fa fa-phone"></i> 720.379.8596</p>
-                                   <p><i class="fa fa-envelope-o"></i> <a href="#">info@3ghc.com</a></p>
+                                   <p><i class="fa fa-phone"></i> 720.710.5580</p>
+                                   <!-- <p><i class="fa fa-envelope-o"></i> <a href="#">info@3ghc.com</a></p> -->
                               </div>
                          </div>
                     </div>
@@ -430,15 +430,15 @@
                               <div class="opening-hours">
                                    <h4 class="wow fadeInUp" data-wow-delay="0.4s">Business Hours</h4>
                                    <p>Monday - Friday <span>09:00 AM - 5:00 PM</span></p>
-                                   <p>Saturday <span>09:00 AM - 08:00 PM</span></p>
-                                   <p>Sunday <span>Closed</span></p>
+                                   <!-- <p>Saturday <span>09:00 AM - 08:00 PM</span></p>
+                                   <p>Sunday <span>Closed</span></p> -->
                               </div> 
 
-                              <ul class="social-icon">
+                              <!-- <ul class="social-icon">
                                    <li><a href="https://www.facebook.com/tooplate" class="fa fa-facebook-square" attr="facebook icon"></a></li>
                                    <li><a href="#" class="fa fa-twitter"></a></li>
                                    <li><a href="#" class="fa fa-instagram"></a></li>
-                              </ul>
+                              </ul> -->
                          </div>
                     </div>
 
