updated index file

--- a/index.html
+++ b/index.html
@@ -91,20 +91,20 @@
                          <div class="owl-carousel owl-theme">
                               <div class="item item-first">
                                    <div class="caption">
-                                        <!-- <div class="col-md-offset-1 col-md-10">
-                                             <h3>Let's make your life happier</h3>
-                                             <h1>Progressive Healthy Living</h1>
-                                             <a href="#team" class="section-btn btn btn-default smoothScroll">Meet Our Principals</a>
-                                        </div> -->
+                                        <div class="col-md-offset-1 col-md-10">
+                                             <h1>Welcome To 3G Healthcare</h1>
+                                             <h3>Like the facilities we operate, we're currently upgrading our website. Check back soon or complete the contact form below to get in touch with us today.</h3>
+                                             <!-- <a href="#team" class="section-btn btn btn-default smoothScroll">Meet Our Principals</a> -->
+                                        </div>
                                    </div>
                               </div>
 
                               <div class="item item-second">
                                    <div class="caption">
                                         <div class="col-md-offset-1 col-md-10">
-                                             <!-- <h3>Aenean luctus lobortis tellus</h3>
-                                             <h1>New Lifestyle</h1>
-                                             <a href="#about" class="section-btn btn btn-default btn-gray smoothScroll">More About Us</a> -->
+                                             <h1>Welcome To 3G Healthcare</h1>
+                                             <h3>Like the facilities we operate, we're currently upgrading our website. Check back soon or complete the contact form below to get in touch with us today.</h3>
+                                             <!-- <a href="#about" class="section-btn btn btn-default btn-gray smoothScroll">More About Us</a> -->
                                         </div>
                                    </div>
                               </div>
@@ -112,8 +112,8 @@
                               <div class="item item-third">
                                    <div class="caption">
                                         <div class="col-md-offset-1 col-md-10">
-                                             <!-- <h3>Develop and operate next generation post acute facilities that bridge hotel like amenities, exceptional customer service and outstanding quality care.  We believe that delivering these elements to consumers will set us apart from our competition and will be essential to long-term sustainability and success in a varying healthcare environment.</h3>
-                                             <h1>Our Mission</h1> -->
+                                             <h1>Welcome To 3G Healthcare</h1>
+                                             <h3>Like the facilities we operate, we're currently upgrading our website. Check back soon or complete the contact form below to get in touch with us today.</h3>
                                              <!-- <a href="#news" class="section-btn btn btn-default btn-blue smoothScroll">Read Stories</a> -->
                                         </div>
                                    </div>
