--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-     <title>3G Healthcare</title>
+     <title>FJG Advertising</title>
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=Edge">
      <meta name="description" content="">
@@ -33,23 +33,23 @@
 
 
      <!-- HEADER -->
-     <header>
+     <!-- <header>
           <div class="container">
                <div class="row">
 
                     <div class="col-md-4 col-sm-5">
-                         <p>Welcome to the next generation of healthcare facilities</p>
+                         <p>Our New Website Is Coming Soon</p>
                     </div>
                          
                     <div class="col-md-8 col-sm-7 text-align-right">
-                         <span class="phone-icon"><i class="fa fa-phone"></i> 720.710.5580</span>
+                         <span class="phone-icon"><i class="fa fa-phone"></i> 303.223.7646</span> -->
                          <!-- <span class="date-icon"><i class="fa fa-calendar-plus-o"></i> 9:00 AM - 5:00 PM (Mon-Fri)</span> -->
                          <!-- <span class="email-icon"><i class="fa fa-envelope-o"></i> <a href="#">info@3ghc.com</a></span> -->
-                    </div>
+                    <!-- </div>
 
                </div>
           </div>
-     </header>
+     </header> -->
 
 
      <!-- MENU -->
@@ -64,7 +64,7 @@
                     </button>
 
                     <!-- lOGO TEXT HERE -->
-                    <a class="navbar-brand" href="#"><img src="images/3GLogo.gif" class="img-responsive" style="width: 140px; margin-top: -16px;"></a>
+                    <a class="navbar-brand" href="#"><img src="images/FJG-logo.png" class="img-responsive" style="width: 140px; margin-top: -5px;"></a>
                </div>
 
                <!-- MENU LINKS -->
@@ -74,7 +74,7 @@
                         <!--  <li><a href="#about" class="smoothScroll">About Us</a></li>
                          <li><a href="#team" class="smoothScroll">Principals</a></li> -->
                          <!-- <li><a href="#news" class="smoothScroll">News</a></li> -->
-                         <li><a href="#google-map" class="smoothScroll">Contact</a></li>
+                         <li><a href="#footer" class="smoothScroll">Contact</a></li>
                          <li class="appointment-btn"><a href="#appointment">Send Us A Message</a></li>
                     </ul>
                </div>
@@ -92,9 +92,8 @@
                               <div class="item item-first">
                                    <div class="caption">
                                         <div class="col-md-offset-1 col-md-10">
-                                             <h1>Welcome To 3G Healthcare</h1>
-                                             <h3>Like the facilities we operate, we're currently upgrading our website. Check back soon or complete the contact form below to get in touch with us today.</h3>
-                                             <!-- <a href="#team" class="section-btn btn btn-default smoothScroll">Meet Our Principals</a> -->
+                                             <h1>Welcome To FJG Advertising</h1>
+                                             <h3>Our clients asked, and we're delivering.<br>Our new website is coming soon and will feature client access tools for a true 360 degree partnership.</h3>
                                         </div>
                                    </div>
                               </div>
@@ -102,9 +101,8 @@
                               <div class="item item-second">
                                    <div class="caption">
                                         <div class="col-md-offset-1 col-md-10">
-                                             <h1>Welcome To 3G Healthcare</h1>
-                                             <h3>Like the facilities we operate, we're currently upgrading our website. Check back soon or complete the contact form below to get in touch with us today.</h3>
-                                             <!-- <a href="#about" class="section-btn btn btn-default btn-gray smoothScroll">More About Us</a> -->
+                                             <h1>Welcome To FJG Advertising</h1>
+                                             <h3>Forged from over 40 years of combined experience in the Advertising and Marketing fields from an agency and client side.</h3>
                                         </div>
                                    </div>
                               </div>
@@ -112,9 +110,17 @@
                               <div class="item item-third">
                                    <div class="caption">
                                         <div class="col-md-offset-1 col-md-10">
-                                             <h1>Welcome To 3G Healthcare</h1>
-                                             <h3>Like the facilities we operate, we're currently upgrading our website. Check back soon or complete the contact form below to get in touch with us today.</h3>
-                                             <!-- <a href="#news" class="section-btn btn btn-default btn-blue smoothScroll">Read Stories</a> -->
+                                             <h1>Welcome To FJG Advertising</h1>
+                                             <h3>Full service agency with in-house digital, traditional and media buying offering an advantage to clients in today's competitive advertising landscape.</h3>
+                                        </div>
+                                   </div>
+                              </div>
+
+                              <div class="item item-fourth">
+                                   <div class="caption">
+                                        <div class="col-md-offset-1 col-md-10">
+                                             <h1>Welcome To FJG Advertising</h1>
+                                             <h3>Full service agency with in-house digital, traditional and media buying offering an advantage to clients in today's competitive advertising landscape.</h3>
                                         </div>
                                    </div>
                               </div>
@@ -350,8 +356,8 @@
                                         <label for="select">Select Catagory</label>
                                         <select class="form-control">
                                              <option>General Question</option>
-                                             <option>Real Estate Partnership Inquiry</option>
-                                             <option>New Patient Residency</option>
+                                             <option>New Business Inquiry</option>
+                                             <option>Employment Opportunities</option>
                                         </select>
                                    </div>
 
@@ -370,7 +376,6 @@
           </div>
      </section>
 
-
      <!-- GOOGLE MAP -->
      <!-- <section id="google-map"> -->
      <!-- How to change your own map point
@@ -384,68 +389,57 @@
 
 
      <!-- FOOTER -->
+     <section id="footer">
      <footer data-stellar-background-ratio="5">
           <div class="container">
                <div class="row">
 
-                    <div class="col-md-4 col-sm-4">
+                    <div class="col-md-3 col-sm-3">
                          <div class="footer-thumb"> 
                               <h4 class="wow fadeInUp" data-wow-delay="0.4s">Contact Info</h4>
                               <!-- <p>Fusce at libero iaculis, venenatis augue quis, pharetra lorem. Curabitur ut dolor eu elit consequat ultricies.</p> -->
 
                               <div class="contact-info">
-                                   <p><i class="fa fa-phone"></i> 720.710.5580</p>
-                                   <!-- <p><i class="fa fa-envelope-o"></i> <a href="#">info@3ghc.com</a></p> -->
+                                   <p><!-- <i class="fa fa-phone"></i> -->303-223-7646</p>
                               </div>
                          </div>
                     </div>
 
-                    <div class="col-md-4 col-sm-4"> 
-                         <!-- <div class="footer-thumb"> 
-                              <h4 class="wow fadeInUp" data-wow-delay="0.4s">Latest News</h4>
-                              <div class="latest-stories">
-                                   <div class="stories-image">
-                                        <a href="#"><img src="images/news-image.jpg" class="img-responsive" alt=""></a>
-                                   </div>
-                                   <div class="stories-info">
-                                        <a href="#"><h5>Amazing Technology</h5></a>
-                                        <span>March 08, 2018</span>
-                                   </div>
+                    <div class="col-md-3 col-sm-3"> 
+                         <div class="footer-thumb"> 
+                              <h4 class="wow fadeInUp" data-wow-delay="0.4s">Location</h4>
+                              <div class="contact-info">
+                                   <p><!-- <i class="fa fa-map-pin"></i> --> <a href="#">3201 Osage Street<br>Denver, CO 80211</a></p>
                               </div>
-
-                              <div class="latest-stories">
-                                   <div class="stories-image">
-                                        <a href="#"><img src="images/news-image.jpg" class="img-responsive" alt=""></a>
-                                   </div>
-                                   <div class="stories-info">
-                                        <a href="#"><h5>New Healing Process</h5></a>
-                                        <span>February 20, 2018</span>
-                                   </div>
-                              </div>
-                         </div> -->
+                         </div>
                     </div>
 
-                    <div class="col-md-4 col-sm-4"> 
+                    <div class="col-md-3 col-sm-3"> 
                          <div class="footer-thumb">
                               <div class="opening-hours">
                                    <h4 class="wow fadeInUp" data-wow-delay="0.4s">Business Hours</h4>
-                                   <p>Monday - Friday <span>09:00 AM - 5:00 PM</span></p>
+                                   <p>Monday - Friday <br>09:00 AM - 5:00 PM</p>
                                    <!-- <p>Saturday <span>09:00 AM - 08:00 PM</span></p>
                                    <p>Sunday <span>Closed</span></p> -->
                               </div> 
+                         </div>
+                    </div>
 
-                              <!-- <ul class="social-icon">
-                                   <li><a href="https://www.facebook.com/tooplate" class="fa fa-facebook-square" attr="facebook icon"></a></li>
-                                   <li><a href="#" class="fa fa-twitter"></a></li>
-                                   <li><a href="#" class="fa fa-instagram"></a></li>
-                              </ul> -->
+                    <div class="col-md-3 col-sm-3"> 
+                         <div class="footer-thumb"> 
+                              <h4 class="wow fadeInUp" data-wow-delay="0.4s">Follow Us</h4>
+                              <ul class="social-icon">
+                                   <li><a href=" http://facebook.com/fjgadvertising" class="fa fa-facebook-square" attr="facebook icon"></a></li>
+                                   <li><a href="https://twitter.com/ridewithfjg" class="fa fa-twitter"></a></li>
+                                   <li><a href="http://instagram.com/fjgadvertising" class="fa fa-instagram"></a></li>
+                              </ul>
                          </div>
                     </div>
 
                     <div class="col-md-12 col-sm-12 border-top">
                          <div class="col-md-4 col-sm-6">
                               <div class="copyright-text"> 
-                                   <p>Copyright &copy; 2018 3G Healthcare 
+                                   <p>Copyright &copy; 2019 FJG Andvertising 
                               </div>
                          </div>
                          
@@ -459,6 +453,7 @@
                </div>
           </div>
      </footer>
+     </section>
 
      <!-- SCRIPTS -->
      <script src="js/jquery.js"></script>
@@ -469,6 +464,7 @@
      <script src="js/smoothscroll.js"></script>
      <script src="js/owl.carousel.min.js"></script>
      <script src="js/custom.js"></script>
+     <script type="text/javascript" src="https://cdn.ywxi.net/js/1.js" async></script>
 
 </body>
 </html>
